# chessbrah_episode_guide

./: .gitignore
data/: data_sources.csv
data/games/: Hippopotamus.json  PoojaFan69.json  TheQueensGambit.json  VBKN.json  dennorskrotte.json  ebenetzebeth.json  fianchettonly.json  habitual.json  iattackuresign.json  redwinereduction.json  slowbrah.json  speedonly.json  sterkurstrakur.json  systematic.json  systemplayer.json  tungjatjeta.json  vonamiat.json  wonestall.json  zukertortlaw.json
data/games/archives/: Hippopotamus_200907.DONE.json  Hippopotamus_202206.DONE.json  Hippopotamus_202207.DONE.json  PoojaFan69_202305.DONE.json  PoojaFan69_202306.DONE.json  PoojaFan69_202307.DONE.json  TheQueensGambit_202506.DONE.json  TheQueensGambit_202507.DONE.json  TheQueensGambit_202508.DONE.json  VBKN_202101.DONE.json  VBKN_202102.DONE.json  VBKN_202103.DONE.json  VBKN_202104.DONE.json  VBKN_202106.DONE.json  VBKN_202301.DONE.json  VBKN_202302.DONE.json  VBKN_202303.DONE.json  VBKN_202304.DONE.json  VBKN_202305.DONE.json  dennorskrotte_202505.DONE.json  dennorskrotte_202506.DONE.json  ebenetzebeth_202310.DONE.json  ebenetzebeth_202311.DONE.json  ebenetzebeth_202401.DONE.json  ebenetzebeth_202402.DONE.json  ebenetzebeth_202403.DONE.json  (+44 more)
data_collection/: Dockerfile  Untitled.ipynb  Untitled1.ipynb  chess_prj.py  fetch_games.py  go.sh  go_jupyter.sh  go_ocr.py  go_shell.sh  make_book.py  push_docker.sh  pyproject.toml  script.sh  take_screenshots.sh  yt_dlp_fetch.sh
front_end/: book.json  index.html  script.js  style.css
front_end/src/: script.js
